--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-
 <div class="container">
-<app-tasks></app-tasks>
+    <div class="row">
+        <div class="col-md-8">
+            <app-tasks></app-tasks>
+        </div>
+
+    </div>
 </div>
