--- a/src/main/frontend/src/app/tasks/tasks.component.css
+++ b/src/main/frontend/src/app/tasks/tasks.component.css
@@ -1,6 +1,7 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
 h2{color: royalblue;
 }
 
 #TaskPanel{
-    margin-top: 52px;
+    margin-top: 40px;
 }
