--- a/src/main/frontend/src/styles.css
+++ b/src/main/frontend/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+    padding-top: 1rem;
+}
+.starter-template {
+    padding: 3rem 1.5rem;
+    text-align: center;
+}
