--- a/src/main/frontend/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/main/frontend/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,1 +1,6 @@
-<p>tasks-list works!</p>
+<ul class="list-group">
+    <li class="list-group-item"> ITEM 1</li>
+    <li class="list-group-item"> ITEM 2</li>
+    <li class="list-group-item"> ITEM 3</li>
+    <li class="list-group-item"> ITEM 4</li>
+</ul>
