--- a/src/main/frontend/src/app/tasks/tasks.component.html
+++ b/src/main/frontend/src/app/tasks/tasks.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-2">&nbsp;</div>
     <div class="col-md-8">
-        <div id="TaskPanel" class="panel panel-info">
+        <div id="taskPanel" class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">My Tasks</h3>
             </div>
@@ -15,13 +15,12 @@
                         <app-tasks-list></app-tasks-list>
                     </div>
 
-
                 </div>
 
             </div>
 
         </div>
 
-    </div >
+    </div>
     <div class="col-md-2">&nbsp;</div>
 </div>
