--- a/src/main/frontend/src/app/tasks/tasks.component.css
+++ b/src/main/frontend/src/app/tasks/tasks.component.css
@@ -1,7 +1,9 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+
 h2{color: royalblue;
 }
 
 #taskPanel{
     margin-top: 40px;
+    color: black;
+
 }
