--- a/src/main/frontend/src/app/tasks/tasks.component.html
+++ b/src/main/frontend/src/app/tasks/tasks.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-md-2">&nbsp;</div>
     <div class="col-md-8">
-        <div id="taskPanel" class="panel panel-primary">
+        <div id="taskPanel" class="panel panel-danger">
             <div class="panel-heading">
-                <h3 class="panel-title">My Tasks</h3>
+                <h3 class="panel-title " style="background-color:rgba(0, 0, 0, 0.08);" align="center">Angular - Bootstrap / My Tasks</h3>
             </div>
             <div class="panel-body">
                 <div class="row">
